--- a/Views/Map/Index.cshtml
+++ b/Views/Map/Index.cshtml
@@ -1,7 +1,5 @@
 @{
-    ViewData["Title"] = "Map Planner";
+    ViewData["Title"] = "Map Page";
 }
 
-<div class="text-center">
-    <h1>Display map here!</h1>
-</div>
+<div id="map" style="height: 600px"></div>
