--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -69,3 +69,24 @@ body {
   white-space: nowrap;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.marker {
+  display: block;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+
+.coordinates {
+  background: rgba(0, 0, 0, 0.7);
+  color: #fff;
+  position: absolute;
+  bottom: auto;
+  left: auto;
+  padding: 5px 10px;
+  margin: 10px 0px;
+  font-size: 14px;
+  line-height: 18px;
+  border-radius: 3px;
+  display: none;
+}
