add draggable marker, refactor marker code into functions

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,5 +3,7 @@
 }
 
 <div class="text-center">
-    
+    <h6>OpenTrek is an easy to use travel planner and location recommendation client. Use OpenTrek to plan trips and find the best
+        locations to view during your travels. 
+    </h6>
 </div>
