--- a/Views/Map/Index.cshtml
+++ b/Views/Map/Index.cshtml
@@ -3,4 +3,4 @@
 }
 
 <div id="map" style="height: 500px"></div>
-<pre id="coordinates" class="coordinates"></pre>
+<pre id="country" class="country"></pre>
