update DOM elements with recommendation based on country clicked

--- a/Views/Map/Index.cshtml
+++ b/Views/Map/Index.cshtml
@@ -4,7 +4,6 @@
 }
 
 <div id="map" style="height: 500px"></div>
-<pre id="country" class="country"></pre>
 
-<h1>@Html.DisplayFor(model => model.Country)</h1>
-<h1>@Html.DisplayFor(model => model.Recommendation)</h1>
+<h4 id="country-text">Country: @Html.DisplayFor(model => model.Country)</h4>
+<h4 id="recommendation-text">Recommendation: @Html.DisplayFor(model => model.Recommendation)</h4>
