migrate local db to azure sql database

--- a/Views/Map/Index.cshtml
+++ b/Views/Map/Index.cshtml
@@ -5,5 +5,5 @@
 
 <div id="map" style="height: 500px"></div>
 
-<h4 id="country-text">Country: @Html.DisplayFor(model => model.Country)</h4>
-<h4 id="recommendation-text">Recommendation: @Html.DisplayFor(model => model.Recommendation)</h4>
+<h4>Country: </h4><p id="country-text">@Html.DisplayFor(model => model.Country)</p>
+<h4>Recommendation: </h4><p id ="recommendation-text">@Html.DisplayFor(model => model.Recommendation)</p>
