add user model, pull user data on login page

--- a/Views/Account/Signup.cshtml
+++ b/Views/Account/Signup.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Sign up";
 }
 
-<form class="form-signup">
+<form class="form-signin">
     <img class="mb-4" src="~/assets/logo.PNG" alt="" width="75" height="75">
     <h1 class="h3 mb-3 font-weight-normal">Create an Account</h1>
 
