--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -94,37 +94,11 @@ body {
 /* Login page styles
 -------------------------------------------------- */
 
-.form-signin, .form-signup {
-    width: 100%;
-    max-width: 500px;
-    padding: 15px;
-    margin: 0;
-}
-
-.form-signin .checkbox {
-    font-weight: 400;
-}
-
-.form-signin, .form-signup .form-control {
+.form-control {
     position: relative;
     box-sizing: border-box;
     height: auto;
     padding: 10px;
     font-size: 16px;
-}
-
-.form-signin, .form-signup .form-control:focus {
-    z-index: 2;
-}
-
-.form-signin, .form-signup input[type="email"] {
-    margin-bottom: -1px;
-    border-bottom-right-radius: 0;
-    border-bottom-left-radius: 0;
-}
-
-.form-signin, .form-signup input[type="password"] {
-    margin-bottom: 10px;
-    border-top-left-radius: 0;
-    border-top-right-radius: 0;
+    margin: 10px 0px;
 }
