--- a/Views/Account/Signup.cshtml
+++ b/Views/Account/Signup.cshtml
@@ -1,30 +1,33 @@
-﻿@{
+﻿@model opentrek.Models.UserModel
+
+@{
     ViewData["Title"] = "Sign up";
 }
 
-<form class="form-signin">
+@using (Html.BeginForm("Signup", "Account", FormMethod.Post))
+{
     <img class="mb-4" src="~/assets/logo.PNG" alt="" width="75" height="75">
     <h1 class="h3 mb-3 font-weight-normal">Create an Account</h1>
 
     <label for="inputFirstName" class="sr-only">First Name</label>
-    <input type="text" id="inputFirstName" class="form-control" placeholder="First Name:" required autofocus>
+    <span>@Html.TextBoxFor(u => u.FirstName, "FirstName", new { @class = "form-control", placeholder = "First Name" })</span>
 
     <label for="inputLastName" class="sr-only">Last Name</label>
-    <input type="text" id="inputLastName" class="form-control" placeholder="Last Name:" required>
+    <span>@Html.TextBoxFor(u => u.LastName, "LastName", new { @class = "form-control", placeholder = "Last Name" })</span>
 
     <label for="inputUsername" class="sr-only">Username</label>
-    <input type="text" id="inputUsername" class="form-control" placeholder="Username:" required>
+    <span>@Html.TextBoxFor(u => u.Username, "Username", new { @class = "form-control", placeholder = "Username" })</span>
 
     <label for="inputEmail" class="sr-only">Email</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email:" required>
+    <span>@Html.TextBoxFor(u => u.Email, "Email", new { @class = "form-control", placeholder = "Email" })</span>
 
     <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password:" required>
-
-    <label for="inputPasswordConfirmation" class="sr-only">Confirm Password</label>
-    <input type="password" id="inputPasswordConfirmation" class="form-control" placeholder="Confirm Password:" required>
+    <span>@Html.PasswordFor(u => u.Password, new { @class = "form-control", placeholder = "Password" })</span>
 
     <label>Already have an account?  <a asp-area="" asp-controller="Account" asp-action="Index">Login</a></label>
     <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
     <p class="mt-5 mb-3 text-muted">&copy; OpenTrek 2021</p>
+}
+
+<form class="form-signin">
 </form>
