update welcome message and add login/logout button

--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Login";
 }
 
-@using (Html.BeginForm("Index", "Account", FormMethod.Post))
+@using (Html.BeginForm("Login", "Account", FormMethod.Post))
 {
     <img class="mb-4" src="~/assets/logo.PNG" alt="" width="75" height="75">
     <h1 class="h3 mb-3 font-weight-normal">Login</h1>
