--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -14,13 +14,13 @@
         <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
             <h4 class="my-0 mr-md-auto font-weight-normal">OpenTrek</h4>
             <nav class="my-2 my-md-0 mr-md-3">
-                <span class="p-2 text-dark">@ViewData["CookieName"]</span>
+                <span class="p-2 text-dark"><strong>@ViewData["CookieName"]</strong></span>
                 <a class="p-2 text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                 <a class="p-2 text-dark" asp-controller="Map" asp-action="Index">Map</a>
                 <a class="p-2 text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                 <a class="p-2 text-dark" asp-area="" asp-controller="Account" asp-action="Manage">Account</a>
             </nav>
-            <a class="btn btn-outline-primary" asp-area="" asp-controller="Account" asp-action="Index">Login</a>
+            <a class="btn btn-outline-primary" asp-area="" asp-controller="Account" asp-action="@ViewData["LoginButtonAction"]">@ViewData["LoginButtonAction"]</a>
         </div>
     </header>
     <div class="container">
