--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,8 +2,39 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h6>OpenTrek is an easy to use travel planner and location recommendation client. Use OpenTrek to plan trips and find the best
-        locations to view during your travels. 
-    </h6>
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+<ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+</ol>
+<div class="carousel-inner">
+    <div class="carousel-item active">
+    <img class="first-slide d-block w-100" src="assets/carousel.gif" alt="First slide">
+    <div class="container">
+        <div class="carousel-caption text-left">
+        <h1>Travel recommendations.</h1>
+        <p>OpenTrek allows users to get interesting recommendations and facts about countries they plan to travel to.</p>
+        <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+        </div>
+    </div>
+    </div>
+    <div class="carousel-item">
+    <img class="second-slide d-block w-100" src="assets/carousel.gif" alt="Second slide">
+    <div class="container">
+        <div class="carousel-caption">
+        <h1>Save locations.</h1>
+        <p>Instantly save intresting location recommendations to your account for later. Browse and view your saved locations from the account management page.</p>
+        <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+        </div>
+    </div>
+    </div>
+</div>
+<a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+</a>
+<a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+</a>
 </div>
