--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -24,6 +24,28 @@ a {
   border-color: #1861ac;
 }
 
+.carousel {
+  margin-bottom: 4rem;
+}
+
+.carousel-caption {
+  bottom: 3rem;
+  z-index: 10;
+}
+
+.carousel-item {
+  height: 32rem;
+  background-color: #777;
+}
+
+.carousel-item > img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  height: 32rem;
+}
+
 /* Sticky footer styles
 -------------------------------------------------- */
 html {
