--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -124,3 +124,15 @@ body {
     font-size: 16px;
     margin: 10px 0px;
 }
+
+.marketing .col-lg-4 {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+.marketing h2 {
+  font-weight: 400;
+}
+.marketing .col-lg-4 p {
+  margin-right: .75rem;
+  margin-left: .75rem;
+}
