add more homepage content

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
         <div class="carousel-caption text-left">
         <h1>Travel recommendations.</h1>
         <p>OpenTrek allows users to get interesting recommendations and facts about countries they plan to travel to.</p>
-        <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+        <p><a class="btn btn-lg btn-primary" asp-area="" asp-controller="Account" asp-action="Signup" role="button">Sign up today</a></p>
         </div>
     </div>
     </div>
@@ -23,8 +23,8 @@
     <div class="container">
         <div class="carousel-caption">
         <h1>Save locations.</h1>
-        <p>Instantly save intresting location recommendations to your account for later. Browse and view your saved locations from the account management page.</p>
-        <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+        <p>Instantly save interesting location recommendations to your account for later. Browse and view your saved locations from the account management page.</p>
+        <p><a class="btn btn-lg btn-primary" asp-area="" asp-controller="Account" asp-action="Login" role="button">Learn more</a></p>
         </div>
     </div>
     </div>
@@ -43,21 +43,21 @@
     <div class="row">
         <div class="col-lg-4">
         <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        <h2>Travel Insights</h2>
+        <p>Learn more about the locations you plan to travel to before you arrive. </p>
+        <p><a class="btn btn-secondary" asp-area="" asp-controller="Account" asp-action="Login" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
         <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-        <h2>Heading</h2>
-        <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        <h2>View Saved Locations</h2>
+        <p>Always have your locations saved for when you need them. Login to your account to gain access to your saved locations and view the interesting facts about each country.</p>
+        <p><a class="btn btn-secondary" asp-area="" asp-controller="Account" asp-action="Login" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
         <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        <h2>Account Management</h2>
+        <p>Easily manage your account and update your information so that it is always current.</p>
+        <p><a class="btn btn-secondary" asp-area="" asp-controller="Account" asp-action="Login" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 </div>
