--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -18,16 +18,6 @@
         </div>
     </div>
     </div>
-    <div class="carousel-item">
-    <img class="second-slide d-block w-100" src="assets/carousel.gif" alt="Second slide">
-    <div class="container">
-        <div class="carousel-caption">
-        <h1>Save locations.</h1>
-        <p>Instantly save interesting location recommendations to your account for later. Browse and view your saved locations from the account management page.</p>
-        <p><a class="btn btn-lg btn-primary" asp-area="" asp-controller="Account" asp-action="Login" role="button">Learn more</a></p>
-        </div>
-    </div>
-    </div>
 </div>
 <a class="carousel-control-prev" href="#myCarousel" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
@@ -49,14 +39,14 @@
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
         <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-        <h2>View Saved Locations</h2>
-        <p>Always have your locations saved for when you need them. Login to your account to gain access to your saved locations and view the interesting facts about each country.</p>
+        <h2>Plan Trips</h2>
+        <p>Use our recommendations to plan neat travel destinations for the trips you are planning.</p>
         <p><a class="btn btn-secondary" asp-area="" asp-controller="Account" asp-action="Login" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
         <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-        <h2>Account Management</h2>
-        <p>Easily manage your account and update your information so that it is always current.</p>
+        <h2>Accounts</h2>
+        <p>Create an account now to get access to our travel insights.</p>
         <p><a class="btn btn-secondary" asp-area="" asp-controller="Account" asp-action="Login" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
